home & menu tab fin

--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -1,9 +1,22 @@
-<ion-header>
+<!-- Header -->
+<ion-header class="green">
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>홈 메뉴</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
+<!-- Content -->
+<ion-content class="green">
+  <ion-grid>
+    <ion-row>
+      <!--Ionic -->
+      <ion-col size="12">
+        <ion-card class="ion-padding no-box-shadow border border-radius green">
+          <p>링크만 해주는 화면임</p>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
