--- a/trial01/my-farm-01/src/app/app.component.html
+++ b/trial01/my-farm-01/src/app/app.component.html
@@ -1,3 +1,59 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-split-pane when="md" contentId="main-content">
+    <ion-menu
+      side="start"
+      contentId="main-content"
+      type="overlay"
+      class="green"
+    >
+      <ion-content>
+        <!-- Settings Toolbar -->
+        <ion-header>
+          <ion-item class="transparent ion-text-center" lines="none">
+            <ion-label class="ion-text-left">
+              <div class="clearfix"></div>
+              <ion-text>
+                <h2>구현 중인 페이지 링크들</h2>
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-header>
+        <!-- Content -->
+
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+              <!-- Menu List -->
+              <ion-list>
+                <ion-menu-toggle
+                  translate
+                  auto-hide="false"
+                  *ngFor="let p of appPages"
+                >
+                  <ion-item
+                    lines="none"
+                    class="transparent"
+                    [routerDirection]="'root'"
+                    (click)="openPage(p)"
+                  >
+                    <ion-label>
+                      <p class="text-size-md font-regular text-color-light">
+                        {{ p.title }}
+                      </p>
+                    </ion-label>
+                    <ion-icon
+                      slot="end"
+                      class="icon-color-light"
+                      [name]="p.icon"
+                    ></ion-icon>
+                  </ion-item>
+                </ion-menu-toggle>
+              </ion-list>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
