done: resource added, review-search fin next: review write start

--- a/trial01/my-farm-01/src/app/app.component.html
+++ b/trial01/my-farm-01/src/app/app.component.html
@@ -34,7 +34,7 @@
                     lines="none"
                     class="transparent"
                     [routerDirection]="'root'"
-                    (click)="openPage(p)"
+                    (click)="openPage(p.url)"
                   >
                     <ion-label>
                       <p class="text-size-md font-regular text-color-light">
