--- a/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
+++ b/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
@@ -9,4 +9,5 @@
 
 <ion-content [fullscreen]="true">
   <app-search-bar-simple></app-search-bar-simple>
+  <app-item-list [cardWide]="cardWide"></app-item-list>
 </ion-content>
