--- a/trial01/my-farm-01/src/app/pages/review-write/review-write.page.scss
+++ b/trial01/my-farm-01/src/app/pages/review-write/review-write.page.scss
@@ -3,3 +3,73 @@ ion-card {
     border-bottom: 1px solid var(--dv-background-border);
   }
 }
+
+.order-detail {
+  ion-grid:nth-child(1) {
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  ion-grid {
+    ion-img {
+      height: 150px;
+      object-fit: cover;
+    }
+  }
+}
+
+.keyword-chip-select {
+  ion-slide {
+    height: 25px;
+    border-radius: 15px;
+    margin: 2px;
+    color: rgba(61, 60, 60, 0.692);
+    border: 1px solid rgba(61, 60, 60, 0.692);
+    ion-grid {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+}
+
+.text-write {
+  ion-label {
+    // margin: auto;
+  }
+  ion-textarea {
+    // margin: 5px 0px 20px;
+    background-color: white;
+    border: 1px solid rgba(131, 115, 115, 0.351);
+  }
+}
+.photo-upload {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: scroll;
+  padding: 0px 20px;
+  ion-thumbnail {
+    position: relative;
+    border: 0.1px solid rgba(61, 60, 60, 0.392);
+    background-color: rgba(61, 60, 60, 0.092);
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  ion-label {
+    display: flex;
+    width: 100px;
+    overflow: auto;
+  }
+  ion-grid {
+    position: relative;
+    ion-button {
+      position: absolute;
+      bottom: -5px;
+      left: 70px;
+    }
+  }
+}
