--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<ion-header class="green">
+<ion-header #header class="green">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -9,14 +9,19 @@
 </ion-header>
 <!-- Content -->
 <ion-content class="green">
-  <ion-grid>
-    <ion-row>
-      <!--Ionic -->
-      <ion-col size="12">
-        <ion-card class="ion-padding no-box-shadow border border-radius green">
-          <p>링크만 해주는 화면임</p>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <!-- Tab -->
+
+  <ion-tabs scrollEvents="true" [appHideHeader]="header">
+    <ion-tab-bar slot="top">
+      <ion-tab-button tab="default-home">
+        <ion-label class="text-size-xs font-medium">홈</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="tab8">
+        <ion-label class="text-size-xs font-medium">Products</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="tab9">
+        <ion-label class="text-size-xs font-medium">Blog</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
