deprecated: scroll event is auto outputed with scrollEvent=true in default-home/page/ion-content

--- a/trial01/my-farm-01/src/app/pages/default-home/default-home.page.html
+++ b/trial01/my-farm-01/src/app/pages/default-home/default-home.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content scrollEvents="true">
   <ion-grid class="marginer"> </ion-grid>
   <!-- 인기농장 grid list -->
   <ion-grid class="green grid-list">
