--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -6,22 +6,27 @@
     </ion-buttons>
     <ion-title>홈 메뉴</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-row>
+      <ion-button fill="none" (click)="tabChange('default-home')">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>홈</ion-label>
+      </ion-button>
+      <ion-button fill="none" (click)="tabChange('neighbor-farm')">
+        <ion-icon name="farm"></ion-icon>
+        <ion-label>이웃농장</ion-label>
+      </ion-button>
+      <ion-button fill="none" (click)="tabChange('my-farm')">
+        <ion-icon name="my"></ion-icon>
+        <ion-label>마이농장</ion-label>
+      </ion-button>
+    </ion-row>
+  </ion-toolbar>
 </ion-header>
 <!-- Content -->
 <ion-content class="green">
-  <!-- Tab -->
-
-  <ion-tabs scrollEvents="true" [appHideHeader]="header">
-    <ion-tab-bar slot="top">
-      <ion-tab-button tab="default-home">
-        <ion-label class="text-size-xs font-medium">홈</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="tab8">
-        <ion-label class="text-size-xs font-medium">Products</ion-label>
-      </ion-tab-button>
-      <ion-tab-button tab="tab9">
-        <ion-label class="text-size-xs font-medium">Blog</ion-label>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+  <app-default-home
+    scrollEvents="true"
+    [appHideHeader]="header"
+  ></app-default-home>
 </ion-content>
