--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -1,32 +1,33 @@
 <!-- Header -->
-<ion-header #header class="green">
-  <ion-toolbar>
+<ion-header #header>
+  <ion-toolbar class="green">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>홈 메뉴</ion-title>
   </ion-toolbar>
-  <ion-toolbar>
+  <ion-toolbar class="tabBar">
     <ion-row>
       <ion-button fill="none" (click)="tabChange('default-home')">
         <ion-icon name="home"></ion-icon>
         <ion-label>홈</ion-label>
       </ion-button>
       <ion-button fill="none" (click)="tabChange('neighbor-farm')">
-        <ion-icon name="farm"></ion-icon>
+        <ion-icon name="leaf"></ion-icon>
         <ion-label>이웃농장</ion-label>
       </ion-button>
       <ion-button fill="none" (click)="tabChange('my-farm')">
-        <ion-icon name="my"></ion-icon>
+        <ion-icon name="person"></ion-icon>
         <ion-label>마이농장</ion-label>
       </ion-button>
     </ion-row>
   </ion-toolbar>
 </ion-header>
 <!-- Content -->
-<ion-content class="green">
+<ion-content [fullscreen]="true" class="green">
   <app-default-home
     scrollEvents="true"
     [appHideHeader]="header"
+    *ngIf="initialTab || (currentTab | async) === 'default-home'"
   ></app-default-home>
 </ion-content>
