done: android rm -> rebuild sync, npm plugins rm

--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -28,6 +28,6 @@
   <app-default-home
     scrollEvents="true"
     [appHideHeader]="header"
-    *ngIf="initialTab || (currentTab | async) === 'default-home'"
+    *ngIf="(currentTab | async) === 'default-home' || initialTab"
   ></app-default-home>
 </ion-content>
