done: neighbor-farm(event passing by ref variable, manipulation of output->onchange), ngrok(ngrok http 8080 -host-header=”localhost:8080”) next: neighbor-farm-detail, loading controller by subscribe onInit

--- a/trial01/my-farm-01/src/app/app.component.scss
+++ b/trial01/my-farm-01/src/app/app.component.scss
@@ -11,7 +11,8 @@ ion-menu {
 
   ion-header {
     padding: 10px;
-    background-color: var(--dv-background-accent-dark);
+
+    --background: #17b239;
 
     img {
       width: 50px;
