--- a/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
+++ b/trial01/my-farm-01/src/app/pages/review-search/review-search.page.html
@@ -15,4 +15,5 @@
 >
   <app-search-bar-simple></app-search-bar-simple>
   <app-item-list [cardWide]="cardWide"></app-item-list>
+  <app-footer></app-footer>
 </ion-content>
