--- a/trial01/my-farm-01/src/app/pages/review-write/review-write.page.scss
+++ b/trial01/my-farm-01/src/app/pages/review-write/review-write.page.scss
@@ -3,6 +3,9 @@ ion-card {
     border-bottom: 1px solid var(--dv-background-border);
   }
 }
+.my-margin {
+  margin: 5px 0 5px 0;
+}
 
 .text-write {
   ion-label {
