--- a/trial01/my-farm-01/src/app/pages/home/home.page.html
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.html
@@ -30,4 +30,14 @@
     [appHideHeader]="header"
     *ngIf="(currentTab | async) === 'default-home' || initialTab"
   ></app-default-home>
+  <app-neighbor-farm
+    scrollEvents="true"
+    [appHideHeader]="header"
+    *ngIf="(currentTab | async) === 'neighbor-farm'"
+  ></app-neighbor-farm>
+  <app-my-farm
+    scrollEvents="true"
+    [appHideHeader]="header"
+    *ngIf="(currentTab | async) === 'my-farm'"
+  ></app-my-farm>
 </ion-content>
