--- a/trial01/my-farm-01/src/app/pages/home/home.page.scss
+++ b/trial01/my-farm-01/src/app/pages/home/home.page.scss
@@ -6,3 +6,16 @@
     justify-content: space-between;
   }
 }
+
+ion-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  ion-icon,
+  ion-label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+}
