done: dto refactoring(interface), soft property calling, link(farm-data), pipe importing... next: farm-data

--- a/trial01/my-farm-01/src/app/components/item-list/item-list.component.scss
+++ b/trial01/my-farm-01/src/app/components/item-list/item-list.component.scss
@@ -10,8 +10,21 @@ ion-col {
   }
   ion-label {
     height: 100px;
-    display: flex;
-    flex-direction: column;
+    white-space: initial;
+
+    .two-line {
+      margin: 0;
+
+      h1 {
+        font-size: 0.8em;
+        white-space: initial;
+        width: 130px;
+        height: 40px;
+      }
+    }
+    p {
+      font-size: 0.7em;
+    }
   }
 }
 
