--- a/trial01/my-farm-01/src/app/components/item-list/item-list.component.html
+++ b/trial01/my-farm-01/src/app/components/item-list/item-list.component.html
@@ -2,11 +2,7 @@
 <ion-item *ngIf="cardWide"
   ><ion-grid *ngIf="cardWide">
     <ion-row>
-      <ion-col
-        size="12"
-        *ngFor="let item of items"
-        (click)="openPage('item-detail' + item.id)"
-      >
+      <ion-col size="12" *ngFor="let item of items">
         <ion-button class="text-size-sm" color="success"
           ><p
             (click)="openPage('review-write/' + item.id)"
@@ -16,21 +12,27 @@
           </p></ion-button
         >
 
-        <ion-item lines="none" class="default-item border border-radius">
+        <ion-item
+          lines="none"
+          class="default-item border border-radius"
+          (click)="openPage('neighbor-farm-detail/' + item.id)"
+        >
           <ion-thumbnail slot="start">
             <img class="border-radius" [src]="item.image" />
           </ion-thumbnail>
           <ion-label class="ion-justify-content-between">
             <!-- Title-->
 
-            <h1 class="text-color-primary text-size-lg">
-              {{ item.title }}
-            </h1>
+            <ion-grid class="two-line">
+              <h1 class="text-color-primary">
+                {{ item.title | truncate: [20] }}
+              </h1>
+            </ion-grid>
             <!-- Subtitle-->
-            <p class="text-color-secondary text-size-xs">
-              {{ item.subtitle }}
+            <p class="text-color-secondary">
+              {{ item.description | truncate: [18] }}
             </p>
-            <p class="text-size-sm order-date">주문일자: 날짜 받아와야함</p>
+            <p class="order-date">주문일자: 날짜 받아와야함</p>
           </ion-label>
         </ion-item>
       </ion-col>
@@ -43,6 +45,7 @@
   <ion-item
     class="default-item border border-radius ion-margin-top"
     *ngFor="let item of items.items"
+    (click)="openPage('neighbor-farm-detail/' + item.id)"
   >
     <!-- Avatar-->
     <ion-avatar slot="start">
@@ -51,11 +54,12 @@
     <!-- Text -->
     <ion-label>
       <ion-item>
-        <h2
-          class="text-size-md text-color-primary font-regular"
-          (click)="openPage('item-detail/' + item.id)"
-        >
-          {{ item.title }}
+        <h2 class="text-size-md text-color-primary font-regular">
+          {{
+            item.title.length > 6
+              ? (item.title | slice: 0:6) + ".."
+              : item.title
+          }}
         </h2>
         <h3
           (click)="openPage('review-write/' + item.id)"
@@ -67,7 +71,11 @@
       </ion-item>
 
       <h2 class="text-size-sm text-color-primary font-regular ion-text-wrap">
-        {{ item.subtitle }}
+        {{
+          item.description.length > 6
+            ? (item.description | slice: 0:6) + ".."
+            : item.description
+        }}
       </h2>
     </ion-label>
   </ion-item>
