--- a/trial01/my-farm-01/src/app/pages/default-home/default-home.page.scss
+++ b/trial01/my-farm-01/src/app/pages/default-home/default-home.page.scss
@@ -22,6 +22,18 @@
         margin-right: 5px;
       }
     }
+    .two-line {
+      height: 55px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      h2 {
+        font-size: 1.1em;
+        text-align: center;
+      }
+    }
   }
 }
 
@@ -49,6 +61,18 @@
           height: 20px;
           width: 20px;
           margin-right: 5px;
+        }
+      }
+      .two-line {
+        height: 55px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        h2 {
+          font-size: 1.1em;
+          text-align: center;
         }
       }
     }
